[package]
name = "tiko"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
reqwest = { version = "0.13.1", features = ["json", "blocking", "stream", "multipart", "form"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
mockito = "1.7.0"
